--- a/projects/tron-ui/src/lib/atoms/uni-tron-button/uni-tron-button.component.html
+++ b/projects/tron-ui/src/lib/atoms/uni-tron-button/uni-tron-button.component.html
@@ -1,3 +1,9 @@
-<button [ngClass]="['btn', 'btn-' + color, 'btn-' + size]">
-    {{ text }}
+
+
+  <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+    {{ text}}
   </button>
+
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
