--- a/projects/tron-ui/src/lib/atoms/uni-tron-button/uni-tron-button.component.html
+++ b/projects/tron-ui/src/lib/atoms/uni-tron-button/uni-tron-button.component.html
@@ -1,4 +1,4 @@
-<button class="btn animate-pulse px-4 py-2 rounded-full text-white font-semibold shadow-md transition-colors duration-300">Click me</button>
+<button class="btn px-4 py-2 rounded-full text-white font-semibold shadow-md transition-colors duration-300">Click me</button>
 
   <h1 class="text-3xl font-bold underline">
     Hello world!
